fixing the field alignment with proper css

--- a/style/common.css
+++ b/style/common.css
@@ -708,3 +708,7 @@ input.state, input.zip {
 .users .signature {
     width: 250px;
 }
+
+.projects label {
+    width: 11em;
+}
